# quill

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  quill-key.txt  quill-key.txt.pub  update.json  vite.config.ts
public/: MEDIA-CONTEXT.md
src/: App.css  App.tsx  FormPopup.tsx  Popup.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: emoji.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  export.rs  hook.rs  injection.rs  lib.rs  process.rs  starter.rs  state.rs  tray.rs  uia.rs
src/components/: HotkeyRecorder.tsx  SettingsModal.tsx  Titlebar.tsx
src/pages/: MainPage.tsx
