[package]
name = "quill"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rdev = "0.5"
enigo = "0.2"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
windows = { version = "0.59", features = ["Win32_UI_Accessibility", "Win32_System_Com"] }
